--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,12 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
-
 @layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
+  .button {
+    @apply bg-slate-200 rounded-md p-4 uppercase text-sm hover:bg-slate-300;
+  }
+
+  p {
+    @apply mb-8;
+  }
+
+  h1 {
+    @apply text-4xl mb-8;
   }
 }
 
-*/
