--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -1,3 +1,5 @@
-<h1 class="font-bold text-4xl">Etsy Analyzer</h1>
+<h1 class="text-4xl">Etsy Analyzer</h1>
 
 <p>This tool is used to analyze Etsy orders and customers</p>
+
+<%= link_to "Customers", customers_path %>
