--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <%= render "layouts/flash" %>
     <main class="container mx-auto mt-8 px-5">
       <%= yield %>
     </main>
