--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .button {
-    @apply bg-slate-200 rounded-md p-4 uppercase text-sm hover:bg-slate-300;
+    @apply bg-slate-200 rounded-md px-4 py-2 uppercase text-sm hover:bg-slate-300;
   }
 
   p {
