Add header and styling

--- a/app/views/customers/_customer.html.erb
+++ b/app/views/customers/_customer.html.erb
@@ -1,4 +1,4 @@
-<tr class="<%= cycle("bg-slate-50", "bg-white") %> align-top">
+<tr class="<%= cycle("bg-sky-50", "bg-white") %> align-top">
   <td class="p-4"><%= customer.username %></td>
   <td class="p-4"><%= customer.name %></td>
   <td class="p-4"><%= render "address", customer: customer %></td>
