--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,9 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="bg-slate-50">
     <%= render "layouts/flash" %>
+    <%= render "layouts/header" %>
     <main class="container mx-auto mt-8 px-5">
       <%= yield %>
     </main>
