--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,11 @@
-<div class="shadow-md py-4 bg-white">
+<div class="shadow-md px-12 py-4 bg-white">
   <div class="container flex justify-between items-end mx-auto">
-  <h2 class="text-4xl m-0"><%= link_to "Analyzer", root_path %></h2>
+  <h2 class="text-2xl m-0"><%= link_to "Analyzer", root_path %></h2>
 
   <nav class="flex space-x-8 uppercase text-sm ">
     <%= link_to "Customers", customers_path, class: "pb-1 border-b-4 border-white hover:border-orange-400" %>
     <%= link_to "Orders", "", class: "pb-1 border-b-4 border-white hover:border-orange-400" %>
-    <%= link_to "Products", "", class: "pb-1 border-b-4 border-white hover:border-orange-400" %>
+    <%= link_to "Products", products_path, class: "pb-1 border-b-4 border-white hover:border-orange-400" %>
   </nav>
 </div>
 </div>
