--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,22 @@
-<h1>Products</h1>
+<h1><%= pluralize(Product.count, "Products") %></h1>
 
-<% @products.each do |product| %>
-  <div><%= product.name %></div>
-<% end %>
+<%= render "import_form" %>
+
+<table class="border-2 border-white bg-white table-auto my-8 w-full mx-auto">
+  <tr class="items-top">
+    <td class="uppercase text-sm tracking-wider font-bold p-4">
+      Listing ID
+    </td>
+    <td class="uppercase text-sm tracking-wider font-bold p-4">
+      Name
+    </td>
+    <td class="uppercase text-sm tracking-wider font-bold p-4">
+      Price
+    </td>
+    <td class="uppercase text-sm tracking-wider font-bold p-4">
+      Page
+    </td>
+  </tr>
+
+  <%= render @products %>
+</table>
