--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
 
   <nav class="flex space-x-8 uppercase text-sm ">
     <%= link_to "Customers", customers_path, class: "pb-1 border-b-4 border-white hover:border-orange-400" %>
-    <%= link_to "Orders", "", class: "pb-1 border-b-4 border-white hover:border-orange-400" %>
+    <%= link_to "Orders", orders_path, class: "pb-1 border-b-4 border-white hover:border-orange-400" %>
     <%= link_to "Products", products_path, class: "pb-1 border-b-4 border-white hover:border-orange-400" %>
   </nav>
 </div>
